Move styles to css modules with scss

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/leaflet": "^1.7.11",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "sass": "^1.54.4"
   }
 }
