--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "classnames": "^2.3.1",
     "leaflet": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
