--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "babel-plugin-i18next-extract": "^0.9.0",
     "classnames": "^2.3.1",
+    "i18next": "^21.9.1",
+    "i18next-http-backend": "^1.4.1",
     "leaflet": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.4",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.1",
     "react-router-dom": "^6.3.0",
@@ -29,7 +33,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
-    "format": "prettier --write \"src/**/*.{ts,tsx,json,md,css,scss}\""
+    "format": "prettier --write \"src/**/*.{ts,tsx,json,md,css,scss}\"",
+    "i18n-extract": "NODE_ENV=development babel -f .babelrc 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "browserslist": {
     "production": [
@@ -44,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
     "@types/leaflet": "^1.7.11",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
