--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "leaflet": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^11.18.4",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.1",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@babel/cli": "^7.18.10",
     "@types/leaflet": "^1.7.11",
+    "@types/react-helmet": "^6.1.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
